<resources>
    <string name="app_name" translatable="false">Time Bomb</string>

    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">French</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="german" translatable="false">German</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="china" translatable="false">China</string>

    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="thank_you">Thank you</string>
    <string name="rate_us">Rate us</string>
    <string name="not_now">Not now</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="your_opinion_matter_to_us">Your opinion matter to us</string>
    <string name="if_you_enjoy_this_know_your_device_would_you_mind_rating_us_on_the_google_play_then">If you enjoy this BaseProduct, would \nyou mind rating us on the Google Play, then?</string>

    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="report_bugs_and_tell_us_what_to_improve">Report bugs and tell us what to improve</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="request">Request or feedback</string>
    <string name="send_email">Send by email&#8230;</string>
    <string name="email_clients_not_found">Not found any Email client</string>
    <string name="version">Version</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="title_intro_01">Title 01</string>
    <string name="title_intro_02">Title 02</string>
    <string name="title_intro_03">Title 03</string>
    <string name="continue_">Continue</string>
    <string name="are_you_sure_want_to_quit_app">Are you sure want to quit app?</string>
    <string name="title_dialog_per">Grant these permissions to use <b>"Time Bomb"</b></string>
    <string name="content_dialog_per">Note: You can also grant permission in <b>Settings -> Time Bomb ->  Overlay Access </b></string>
    <string name="u_privacy_policy"><u>Privacy Policy</u></string>
    <string name="time_bomb">Time Bomb</string>
    <string name="taser_gun">"Taser Gun "</string>
    <string name="light_saber">Light Saber</string>
    <string name="chainsaw">Chainsaw</string>
    <string name="flame_thrower">Flame thrower</string>
    <string name="crack_screen">Crack Screen</string>
    <string name="apply">Apply</string>
    <string name="time_bomb_prank">Time Bomb Prank</string>
    <string name="overlay_access">Overlay Access</string>
    <string name="this_app_needs_permissions_below_to_work_properly">This app needs permissions below to work properly</string>
    <string name="permission">Permission</string>
    <string name="hold">Hold</string>
    <string name="touch">Touch</string>
    <string name="flamethrower">Flamethrower</string>
    <string name="single">Single</string>
    <string name="shake">Shake</string>
    <string name="start">Start</string>
    <string name="private_policy">Private policy</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="splash">Splash</string>
    <string name="vibration">Vibration</string>
    <string name="background">Background</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_to_quit_the_application">Are you sure to quit the application</string>
    <string name="ok">OK</string>
    <string name="this_app_may_not_work_correctly_without_the_requested_permissions_go_to_settings_time_bomb_prank_overlay_access">This app may not work correctly without the requested permissions. <b>Go to Settings -> Time Bomb Prank -> Overlay Access</b></string>
    <string name="go_to_settings">Go to <b>Settings</b> </string>
    <string name="you_are_using_crack_screen">You are using <b>Crack Screen</b></string>
    <string name="stop">Stop</string>
    <string name="surprise_shock_with_explosive_sounds">Surprise &amp; Shock With Explosive Sounds</string>
    <string name="choose_your_warzone_background">Choose Your Warzone Background</string>
    <string name="many_unique_bomb_sound_to_prank">Many Unique Bomb Sound To Prank</string>
    <string name="no_sound">No sound</string>
    <string name="continues">Continue</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="invalid_type">Invalid type</string>
    <string name="please_choose_your_language">please choose your language</string>
    <string name="this_device_does_not_have_a_sensor">This device does not have a sensor.</string>
    <string name="install">Install</string>

</resources>