<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_04"
    xmlns:tools="http://schemas.android.com/tools">
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="back"
        android:padding="8dp"
        android:clickable="false"
        android:focusable="false"
        android:visibility="invisible"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:text="@string/permission"
        android:includeFontPadding="false"
        android:lines="1"
        android:maxLines="1"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"
        app:layout_constraintEnd_toStartOf="@id/favorite"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="@id/iv_back" />

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:clickable="false"
        android:focusable="false"
        android:padding="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />



    <ScrollView
        android:id="@+id/sclView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        app:layout_constraintBottom_toTopOf="@id/tv_continue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img"
                android:layout_width="178dp"
                android:layout_height="178dp"
                android:src="@drawable/img_permission"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/this_app_needs_permissions_below_to_work_properly"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img"
                android:layout_marginHorizontal="16dp"
                android:gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/inter_semi_bold"
                android:textColor="@color/white"
                android:textSize="13sp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:background="@drawable/bg_permission"
                app:layout_constraintTop_toBottomOf="@id/txt"
                android:layout_marginTop="24dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/overlay_access"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="@id/sw_overlay"
                    app:layout_constraintBottom_toBottomOf="@id/sw_overlay"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <ImageView
                    android:id="@+id/sw_overlay"
                    android:layout_width="52dp"
                    android:layout_height="48dp"
                    android:src="@drawable/img_switch_ns"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="14dp"
        android:layout_marginHorizontal="16dp"
        android:includeFontPadding="false"
        android:text="@string/continues"
        android:layout_marginBottom="230dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/inter_semi_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>