<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_04">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="back"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:includeFontPadding="false"
        android:lines="1"
        android:maxLines="1"
        android:text="Settings"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"
        app:layout_constraintEnd_toStartOf="@id/favorite"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="@id/iv_back" />

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:clickable="false"
        android:focusable="false"
        android:padding="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_vibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_lang_item_sn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_language">

        <ImageView
            android:id="@+id/ic_vibration"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:padding="12dp"
            android:src="@drawable/ic_setting_vibration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Vibration"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_vibration"
            app:layout_constraintStart_toEndOf="@id/ic_vibration"
            app:layout_constraintTop_toTopOf="@id/ic_vibration" />

        <ImageView
            android:id="@+id/sw_vibrate"
            android:layout_width="52dp"
            android:layout_height="0dp"
            android:layout_marginVertical="4dp"
            android:layout_marginEnd="14dp"
            android:src="@drawable/img_switch_ns"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_flash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_lang_item_sn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_vibration">

        <ImageView
            android:id="@+id/ic_flash"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:padding="12dp"
            android:src="@drawable/ic_setting_flash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Splah"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_flash"
            app:layout_constraintStart_toEndOf="@id/ic_flash"
            app:layout_constraintTop_toTopOf="@id/ic_flash" />

        <ImageView
            android:id="@+id/sw_flash"
            android:layout_width="52dp"
            android:layout_height="0dp"
            android:layout_marginVertical="4dp"
            android:layout_marginEnd="14dp"
            android:src="@drawable/img_switch_ns"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_lang_item_sn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_flash">

        <ImageView
            android:id="@+id/ic_sound"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:padding="12dp"
            android:src="@drawable/ic_setting_sound"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Sound"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_sound"
            app:layout_constraintStart_toEndOf="@id/ic_sound"
            app:layout_constraintTop_toTopOf="@id/ic_sound" />

        <ImageView
            android:id="@+id/sw_sound"
            android:layout_width="52dp"
            android:layout_height="0dp"
            android:layout_marginEnd="14dp"
            android:src="@drawable/img_switch_ns"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_lang_item_sn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <ImageView
            android:id="@+id/ic_language"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:padding="12dp"
            android:src="@drawable/ic_setting_language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Language"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_language"
            app:layout_constraintStart_toEndOf="@id/ic_language"
            app:layout_constraintTop_toTopOf="@id/ic_language" />

        <ImageView
            android:id="@+id/arrow_right"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="4dp"
            android:layout_marginEnd="4dp"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_lang_item_sn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sound">

        <ImageView
            android:id="@+id/ic_sh"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:padding="12dp"
            android:src="@drawable/ic_setting_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_sh"
            app:layout_constraintStart_toEndOf="@id/ic_sh"
            app:layout_constraintTop_toTopOf="@id/ic_sh" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_lang_item_sn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_share">

        <ImageView
            android:id="@+id/ic_ra"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:padding="12dp"
            android:src="@drawable/ic_setting_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_ra"
            app:layout_constraintStart_toEndOf="@id/ic_ra"
            app:layout_constraintTop_toTopOf="@id/ic_ra" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_lang_item_sn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_rate">

        <ImageView
            android:id="@+id/ic_ab"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:padding="12dp"
            android:src="@drawable/ic_setting_about"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_ab"
            app:layout_constraintStart_toEndOf="@id/ic_ab"
            app:layout_constraintTop_toTopOf="@id/ic_ab" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="4dp"
            android:layout_marginEnd="4dp"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>